istio/istio-gateway/virtualservice.yaml
# VirtualService for ecommerce
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ecommerce-routes
  namespace: ecommerce
spec:
  hosts:
  - "localhost.local"
  gateways:
  - istio-system/shared-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: ecommerce-ui
        port:
          number: 4000

---
# VirtualService for argocd
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-routes
  namespace: argocd
spec:
  hosts:
  - "localhost.local"
  gateways:
  - istio-system/shared-gateway
  http:
  - match:
    - uri:
        prefix: /argocd
    route:
    - destination:
        host: argocd-helm-server
        port:
          number: 80
